samples/_failures_safe/1761548529_d6a12d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b02f2b9.c: In function ‘main’:
./samples/SAFE/__tmp_2b02f2b9.c:176:9: error: expected declaration or statement at end of input
  176 |         print_token_type(tokens[i].type);
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2b02f2b9.c:176:9: error: expected declaration or statement at end of input
